# Helix-Transvoicer

./: README.md  install_cuda.py  pyproject.toml  requirements.txt  run-server.bat  run.bat  setup.ps1
assets/: README.md
docs/: DESIGN.md
scripts/: build_windows.py  check_dependencies.py  setup_windows.py  train_rvc.py
src/helix_transvoicer/: __init__.py  main.py
src/helix_transvoicer/backend/: __init__.py  main.py
src/helix_transvoicer/backend/api/: __init__.py  audio.py  convert.py  models.py  system.py  tts.py
src/helix_transvoicer/backend/core/: __init__.py  audio_processor.py  emotion_analyzer.py  model_trainer.py  tts_engine.py  voice_converter.py
src/helix_transvoicer/backend/models/: __init__.py  decoder.py  encoder.py  vocoder.py
src/helix_transvoicer/backend/rvc/: __init__.py  inference.py  models.py  rmvpe.py  synthesizer.py  training.py
src/helix_transvoicer/backend/services/: __init__.py  job_queue.py  model_manager.py
src/helix_transvoicer/backend/utils/: __init__.py  audio.py  config.py  device.py  rvc_utils.py
src/helix_transvoicer/frontend/: __init__.py  app.py  main.py
src/helix_transvoicer/frontend/components/: __init__.py  controls.py  dropzone.py  progress.py  status_bar.py  waveform.py
src/helix_transvoicer/frontend/panels/: __init__.py  builder.py  converter.py  emotions.py  library.py  tts.py
src/helix_transvoicer/frontend/styles/: __init__.py  theme.py
src/helix_transvoicer/frontend/utils/: __init__.py  api_client.py
